# WolkAbout-task

./: .gitmodules  CMakeLists.txt  README.md  task.txt
cpuTemperatureReader/: CMakeLists.txt  Makefile  cpuTemperatureReader.hpp  main  main.cpp
ipAddressReader/: CMakeLists.txt  main.cpp
